--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Research Browser</title>
+    <title>Cartographist</title>
   </head>
   <body>
     <div id="app"></div>
